HDIV CHANGELOG
==============
http://www.hdiv.org

Release 3.3.0
==================================
 * Fix Spring security issue that may cause the links not to be processed by Hdiv

Release 3.2.0
==================================
 * Add new methods to ISession to get/set/remove session attributes.
 * Refactor state id generation and parse.

Release 3.1.1
==================================
 * Fix spring-security 4.0.x support bug

Release 3.1.0
==================================
 * Performance improvements.

Release 3.0.0
==================================
 * Remove Cipher and Hash strategies.
 * Servlet API >= 3.0
 * Support asynchronous requests.
 * Add 'hdiv-page-' prefix to pages stored in user session.
 * Refactor validation error message creation. It is not created in ValidatorHelperRequest but ValidatorFilter.
 
Release 2.1.14
==================================
 * LinkUrlProcessor: remove input _HDIV_STATE_ parameter if it exists.
 * Bug fixed in page refresh and non sequential page ids.

Release 2.1.13
==================================
 * Multiple iframe support in the same page 
 * Fix issue with IE 6 when redirects to a URL with a fragment identifier.
 * Extension of Struts 1 Tiles InsertTag class for actions with parameters (queryString) support.
 * Fix issue in HDIV Core library. It was caused when repeated values were received in last positions of array named "values".
 * Multipart request handler modified to return appropriate RequestWrapper object, if available, unwrapping the given request as far as necessary.
 
Release 2.1.12
==================================
 * Fix issue in Struts1: HDIVTilesRequestProcessor class
 * Fix issue in Spring version check.

Release 2.1.11
==================================

 * Fix issue in longLiving request validation.
 * Fix issue in concurrent Ajax requests with 'reuseExistingPageInAjaxRequest' option enabled.
 * New 'X-HDIV-EXCLUDE-PAGE-REUSE' header to avoid page reusing in Ajax calls.

Release 2.1.10