@@ -4,7 +4,9 @@ http://www.hdiv.org
 
 Release 3.3.0
 ==================================
+ * Fix issue with parameters without values in WebSphere servers: http://www-01.ibm.com/support/docview.wss?uid=swg1PM35450 
  * Fix Spring security issue that may cause the links not to be processed by Hdiv
+ * Performance improvements.
 
 Release 3.2.0
 ==================================
